<resources>
    <string name="app_name">Logmeet</string>

    <!--    start-->
    <string name="join">회원가입</string>
    <string name="login">로그인</string>
    <!--    join1-->
    <string name="logmeet_join">로그밋계정으로 회원가입</string>
    <string name="kakao_join">카카오 계정으로 회원가입</string>
    <!--    join2-->
    <string name="example_email">example@email.com</string>
    <string name="type_error_message">올바르지 않은 형식입니다.</string>
    <string name="example_code">인증번호 6자리</string>
    <string name="resend">재전송</string>
    <string name="certify">인증하기</string>
    <string name="next_step">다음 단계로</string>
    <string name="init_text_length">0 / 10</string>
    <string name="login_logmeet">로그밋계정으로 로그인</string>
    <string name="login_kakao">카카오 계정으로 로그인</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="email_error_msg">가입되지 않은 이메일입니다.</string>
    <string name="pwd_error_msg">비밀번호가 일치하지 않습니다.</string>
    <string name="my_project">나의 프로젝트</string>
    <string name="more">더보기</string>
    <string name="add_new_project">새 프로젝트 추가</string>
    <string name="mom">회의록</string>
    <string name="project_name">프로젝트명</string>
    <string name="example_project_name">프로젝트명 입력</string>
    <string name="init_text_length_8">0 / 8</string>
    <string name="example_date">YYYY.MM.dd</string>
    <string name="eng_projects">Projects</string>
    <string name="recent_mom">최근 회의록</string>
    <string name="search">검색</string>
    <string name="example_search">제목이나 키워드를 입력하세요.</string>
    <string name="add_schedule_title">일정 추가</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>