<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login2Activity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>

    <ImageView
        android:id="@+id/iv_login2_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_left_chevron"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_login2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="로그밋 계정으로 로그인합니다."
        style="@style/headline2B"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/iv_login2_back"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tv_login2_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        style="@style/body2B"
        android:textColor="@color/main_gray"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/tv_login2_title"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_login2_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/body1R"
        android:hint="@string/example_email"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_login2_email_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"/>

    <ImageView
        android:id="@+id/iv_login2_email_clear"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_close_circle"
        app:layout_constraintTop_toTopOf="@id/tiet_login2_email"
        app:layout_constraintBottom_toBottomOf="@id/tiet_login2_email"
        app:layout_constraintEnd_toEndOf="@id/tiet_login2_email"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login2_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tiet_login2_email"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_login2_email_error"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_error_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_login2_email_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_error_msg"
            style="@style/caption"
            android:textColor="@color/error"
            app:layout_constraintStart_toEndOf="@id/iv_login2_email_error"
            app:layout_constraintTop_toTopOf="@id/iv_login2_email_error"
            app:layout_constraintBottom_toBottomOf="@id/iv_login2_email_error"
            android:layout_marginStart="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_login2_pwd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/body2B"
        android:textColor="@color/main_gray"
        app:layout_constraintTop_toBottomOf="@id/tiet_login2_email"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="2dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_login2_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/body1R"
        android:hint="비밀번호 입력"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_login2_pwd_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"/>

    <ImageView
        android:id="@+id/iv_login2_pwd_clear"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_close_circle"
        app:layout_constraintTop_toTopOf="@id/tiet_login2_pwd"
        app:layout_constraintBottom_toBottomOf="@id/tiet_login2_pwd"
        app:layout_constraintEnd_toEndOf="@id/tiet_login2_pwd"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login2_pwd_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tiet_login2_pwd"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_login2_pwd_error"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_error_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_login2_pwd_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_error_msg"
            style="@style/caption"
            android:textColor="@color/error"
            app:layout_constraintStart_toEndOf="@id/iv_login2_pwd_error"
            app:layout_constraintTop_toTopOf="@id/iv_login2_pwd_error"
            app:layout_constraintBottom_toBottomOf="@id/iv_login2_pwd_error"
            android:layout_marginStart="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_login2_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/body2B"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/btn_gray_8px"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="110dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>