<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.join.Join2Activity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>

    <ImageView
        android:id="@+id/iv_join2_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_left_chevron"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/iv_join2_back"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_join_check"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_join_done"/>
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_join_continue"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_join_to_next"/>
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_join_upcoming"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_join_not_done"/>
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_join"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_join_not_done"/>
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_join"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_join2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이메일 주소 인증"
        style="@style/headline2B"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/iv_join2_back"
        android:layout_marginStart="2dp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/tv_join2_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="인증할 이메일 주소를 입력해주세요."
        style="@style/body1R"
        app:layout_constraintTop_toBottomOf="@id/tv_join2_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:layout_marginTop="4dp"
        android:layout_marginStart="2dp"/>

    <TextView
        android:id="@+id/tv_join2_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이메일 주소"
        style="@style/body2B"
        android:textColor="@color/main_gray"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/tv_join2_subtitle"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_join2_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/body1R"
        android:hint="@string/example_email"
        app:layout_constraintTop_toBottomOf="@id/tv_join2_email_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"/>
    
    <ImageView
        android:id="@+id/iv_join2_email_clear"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_close_circle"
        app:layout_constraintTop_toTopOf="@id/tiet_join2_email"
        app:layout_constraintBottom_toBottomOf="@id/tiet_join2_email"
        app:layout_constraintEnd_toEndOf="@id/tiet_join2_email"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_join2_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tiet_join2_email"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_join2_email_error"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_error_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_join2_email_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_error_message"
            style="@style/caption"
            android:textColor="@color/error"
            app:layout_constraintStart_toEndOf="@id/iv_join2_email_error"
            app:layout_constraintTop_toTopOf="@id/iv_join2_email_error"
            app:layout_constraintBottom_toBottomOf="@id/iv_join2_email_error"
            android:layout_marginStart="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_join2_email_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tiet_join2_email"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_join2_email_done"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_check_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_join2_email_done_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="입력하신 이메일로 인증코드가 발송되었습니다."
            style="@style/caption"
            android:textColor="@color/main_blue"
            app:layout_constraintStart_toEndOf="@id/iv_join2_email_done"
            app:layout_constraintTop_toTopOf="@id/iv_join2_email_done"
            app:layout_constraintBottom_toBottomOf="@id/iv_join2_email_done"
            android:layout_marginStart="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_join2_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="인증번호 발송"
        style="@style/body2B"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/btn_gray_8px"
        app:layout_constraintTop_toBottomOf="@id/tiet_join2_email"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="60dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tiet_join2_email"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_join2_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="인증번호"
            style="@style/body2B"
            android:textColor="@color/main_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="2dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_join2_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/body1R"
            android:hint="@string/example_code"
            app:layout_constraintTop_toBottomOf="@id/tv_join2_code_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="2dp"/>

        <ImageView
            android:id="@+id/iv_join2_code_clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_close_circle"
            app:layout_constraintTop_toTopOf="@id/tiet_join2_code"
            app:layout_constraintBottom_toBottomOf="@id/tiet_join2_code"
            app:layout_constraintEnd_toEndOf="@id/tiet_join2_code"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_join2_code_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tiet_join2_code"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_join2_code_error"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_error_circle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_join2_code_error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="인증코드가 일치하지 않습니다."
                style="@style/caption"
                android:textColor="@color/error"
                app:layout_constraintStart_toEndOf="@id/iv_join2_code_error"
                app:layout_constraintTop_toTopOf="@id/iv_join2_code_error"
                app:layout_constraintBottom_toBottomOf="@id/iv_join2_code_error"
                android:layout_marginStart="4dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_join2_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            style="@style/body2B"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            android:textColor="@color/main_blue"
            android:background="@drawable/btn_blueline_8px"
            app:layout_constraintTop_toBottomOf="@id/tiet_join2_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_join2_certify"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/tv_join2_certify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certify"
            style="@style/body2B"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_gray_8px"
            app:layout_constraintTop_toTopOf="@id/tv_join2_resend"
            app:layout_constraintStart_toEndOf="@id/tv_join2_resend"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_join2_done_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이메일 인증이 완료되었습니다."
            style="@style/body2B"
            android:textColor="@color/main_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiet_join2_code"
            android:layout_marginTop="20dp"
            android:layout_marginStart="2dp"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_join2_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        style="@style/body2B"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/btn_blue_8px"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="110dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>